--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "jest": "^27.3.1",
     "node-sass": "^4.14.1",
     "parcel": "1.12.3",
+    "sass": "^1.65.1",
     "stylelint": "^13.5.0",
     "stylelint-config-recommended-scss": "^3.3.0",
     "stylelint-scss": "^3.17.2"
