remove gh-pages & gulp-htmllint

--- a/package.json
+++ b/package.json
@@ -30,9 +30,7 @@
     "eslint-plugin-node": "^11.1.0",
     "jest": "^29.7.0",
     "parcel": "2.10.2",
-    "stylelint": "^15.11.0",
-    "gh-pages": "5.0.0",
-    "gulp-htmllint": "0.0.19"
+    "stylelint": "^15.11.0"
   },
   "browserslist": [
     "last 2 versions"
