--- a/package.json
+++ b/package.json
@@ -22,9 +22,9 @@
     "@mate-academy/bemlint": "^0.1.1",
     "@mate-academy/eslint-config": "*",
     "@mate-academy/linthtml-config": "*",
+    "@mate-academy/scripts": "^1.2.10",
     "@mate-academy/stylelint-config": "*",
-    "@mate-academy/scripts": "^1.2.8",
-    "@parcel/transformer-sass": "^2.10.2",
+    "@parcel/transformer-sass": "2.10.2",
     "backstopjs": "^6.2.2",
     "eslint": "^8.52.0",
     "eslint-plugin-node": "^11.1.0",
@@ -32,9 +32,6 @@
     "parcel": "2.10.2",
     "stylelint": "^15.11.0"
   },
-  "browserslist": [
-    "last 2 versions"
-  ],
   "mateAcademy": {
     "projectType": "layout"
   },
