--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "@mate-academy/bemlint": "^0.1.1",
     "@mate-academy/eslint-config": "*",
     "@mate-academy/linthtml-config": "*",
-    "@mate-academy/scripts": "^1.2.10",
+    "@mate-academy/scripts": "^1.2.12",
     "@mate-academy/stylelint-config": "*",
     "@parcel/transformer-sass": "2.10.2",
     "backstopjs": "^6.2.2",
@@ -35,5 +35,7 @@
   "mateAcademy": {
     "projectType": "layout"
   },
-  "dependencies": {}
+  "dependencies": {
+    "package.json": "^2.0.1"
+  }
 }
