--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@mate-academy/linthtml-config": "0.0.2",
     "@mate-academy/scripts": "^1.2.8",
     "@mate-academy/stylelint-config": "*",
+    "@parcel/transformer-sass": "^2.9.3",
     "backstopjs": "^5.0.1",
     "eslint": "^5.16.0",
     "eslint-plugin-node": "^8.0.1",
@@ -32,7 +33,7 @@
     "gulp-htmllint": "0.0.16",
     "jest": "^27.3.1",
     "node-sass": "^4.14.1",
-    "parcel": "1.12.3",
+    "parcel": "^1.12.3",
     "stylelint": "^13.5.0",
     "stylelint-config-recommended-scss": "^3.3.0",
     "stylelint-scss": "^3.17.2"
