--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "@mate-academy/bemlint": "^0.1.1",
     "@mate-academy/eslint-config": "*",
     "@mate-academy/linthtml-config": "*",
-    "@mate-academy/scripts": "^1.2.12",
+    "@mate-academy/scripts": "^1.3.1",
     "@mate-academy/stylelint-config": "^0.0.11",
     "@parcel/transformer-sass": "2.10.2",
     "backstopjs": "^6.2.2",
@@ -35,5 +35,14 @@
   "mateAcademy": {
     "projectType": "layout"
   },
-  "dependencies": {}
+  "dependencies": {},
+  "main": ".eslintrc.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/tsnax98/layout_calendar.git"
+  },
+  "bugs": {
+    "url": "https://github.com/tsnax98/layout_calendar/issues"
+  },
+  "homepage": "https://github.com/tsnax98/layout_calendar#readme"
 }
