added to file variable

--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "jest": "^27.3.1",
     "node-sass": "^4.14.1",
     "parcel": "^1.12.4",
+    "parcel-bundler": "^1.12.5",
     "stylelint": "^13.5.0",
     "stylelint-config-recommended-scss": "^3.3.0",
     "stylelint-scss": "^3.17.2"
@@ -43,5 +44,14 @@
   },
   "dependencies": {
     "@mate-academy/backstop-config": "^1.0.0"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/20in20in/layout_calendar.git"
+  },
+  "keywords": [],
+  "bugs": {
+    "url": "https://github.com/20in20in/layout_calendar/issues"
+  },
+  "homepage": "https://github.com/20in20in/layout_calendar#readme"
 }
