--- a/.linthtmlrc.json
+++ b/.linthtmlrc.json
@@ -38,7 +38,7 @@
   ],
   "tag-name-lowercase": true,
   "tag-name-match": true,
-  "tag-self-close": "always",
+  "tag-self-close": false,
   "tag-close": true,
   "text-ignore-regex": "&",
   "title-no-dup": true,
