--- a/package.json
+++ b/package.json
@@ -18,10 +18,10 @@
   "author": "Mate Academy",
   "license": "GPL-3.0",
   "devDependencies": {
-    "@linthtml/linthtml": "latest",
-    "@mate-academy/backstop-config": "latest",
+    "@linthtml/linthtml": "^0.9.5",
+    "@mate-academy/backstop-config": "^1.0.0",
     "@mate-academy/bemlint": "latest",
-    "@mate-academy/eslint-config": "latest",
+    "@mate-academy/eslint-config": "0.0.29",
     "@mate-academy/linthtml-config": "latest",
     "@mate-academy/scripts": "^1.7.3",
     "@mate-academy/stylelint-config": "latest",
