--- a/package.json
+++ b/package.json
@@ -17,25 +17,25 @@
   "keywords": [],
   "author": "Mate Academy",
   "license": "GPL-3.0",
+  "dependencies": {},
   "devDependencies": {
-    "@linthtml/linthtml": "latest",
+    "@linthtml/linthtml": "^0.9.5",
     "@mate-academy/backstop-config": "latest",
     "@mate-academy/bemlint": "latest",
-    "@mate-academy/eslint-config": "latest",
     "@mate-academy/linthtml-config": "latest",
-    "@mate-academy/scripts": "^1.7.2",
+    "@mate-academy/scripts": "^1.7.3",
     "@mate-academy/stylelint-config": "latest",
-    "@parcel/transformer-sass": "2.10.2",
-    "backstopjs": "^6.2.2",
-    "eslint": "^7.32.0",
-    "eslint-plugin-node": "^11.1.0",
+    "@parcel/transformer-sass": "^2.12.0",
+    "backstopjs": "6.2.2",
     "jest": "^29.7.0",
-    "parcel": "2.10.2",
+    "parcel": "^2.12.0",
     "prettier": "^3.2.5",
     "stylelint": "^15.11.0"
   },
   "mateAcademy": {
-    "projectType": "layout"
-  },
-  "dependencies": {}
+    "projectType": "layout",
+    "linters": {
+      "javascript": false
+    }
+  }
 }
