--- a/package.json
+++ b/package.json
@@ -1,15 +1,14 @@
 {
   "name": "calendar",
-  "source": "src/index.html",
   "version": "1.0.0",
   "description": "Frontend practice with calendar",
   "scripts": {
     "init": "mate-scripts init",
-    "start": "parcel --open",
+    "start": "mate-scripts start",
     "format": "prettier --ignore-path .prettierignore --write './src/**/*.{html,css,scss}'",
     "lint": "npm run format && mate-scripts lint",
     "test:only": "mate-scripts test",
-    "build": "parcel build --public-url=/dist/",
+    "build": "mate-scripts build",
     "deploy": "mate-scripts deploy",
     "update": "mate-scripts update",
     "postinstall": "npm run update",
