--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
   "keywords": [],
   "author": "Mate Academy",
   "license": "GPL-3.0",
-  "dependencies": {},
+  "dependencies": {
+    "backstopjs": "^6.2.2"
+  },
   "devDependencies": {
     "@linthtml/linthtml": "^0.9.5",
     "@mate-academy/backstop-config": "latest",
@@ -26,7 +28,6 @@
     "@mate-academy/scripts": "^1.8.1",
     "@mate-academy/stylelint-config": "latest",
     "@parcel/transformer-sass": "^2.12.0",
-    "backstopjs": "6.2.2",
     "jest": "^29.7.0",
     "parcel": "^2.12.0",
     "prettier": "^3.2.5",
