--- a/package.json
+++ b/package.json
@@ -22,14 +22,16 @@
     "@mate-academy/backstop-config": "latest",
     "@mate-academy/bemlint": "latest",
     "@mate-academy/linthtml-config": "latest",
-    "@mate-academy/scripts": "^1.9.12",
+    "@mate-academy/scripts": "^0.9.14",
     "@mate-academy/stylelint-config": "latest",
     "@parcel/transformer-sass": "^2.12.0",
     "backstopjs": "6.3.23",
+    "eslint": "^9.10.0",
+    "eslint-plugin-html": "^8.1.1",
+    "htmlhint": "^1.1.4",
     "jest": "^29.7.0",
     "parcel": "^2.12.0",
-    "prettier": "^3.3.2",
-    "stylelint": "^16.7.0",
+    "stylelint": "^16.9.0",
     "stylelint-scss": "^6.4.1"
   },
   "mateAcademy": {
