--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "@parcel/transformer-sass": "^2.12.0",
     "backstopjs": "6.3.23",
     "jest": "^29.7.0",
-    "parcel": "^2.12.0",
+    "parcel": "^2.13.0",
     "prettier": "^3.3.2",
     "stylelint": "^16.7.0",
     "stylelint-scss": "^6.4.1"
@@ -37,5 +37,14 @@
     "linters": {
       "javascript": false
     }
-  }
+  },
+  "main": ".eslintrc.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Stanislav0909/layout_calendar.git"
+  },
+  "bugs": {
+    "url": "https://github.com/Stanislav0909/layout_calendar/issues"
+  },
+  "homepage": "https://github.com/Stanislav0909/layout_calendar#readme"
 }
