--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "calendar",
   "version": "1.0.0",
   "description": "Frontend practice with calendar",
+  "homepage": "https://quantumcoder228.github.io/layout_calendar/",
   "scripts": {
     "init": "mate-scripts init",
     "start": "mate-scripts start",
@@ -9,7 +10,7 @@
     "lint": "npm run format && mate-scripts lint",
     "test:only": "mate-scripts test",
     "build": "mate-scripts build",
-    "deploy": "mate-scripts deploy",
+    "deploy": "gh-pages -d src",
     "update": "mate-scripts update",
     "postinstall": "npm run update",
     "test": "npm run lint && npm run test:only"
@@ -26,6 +27,7 @@
     "@mate-academy/stylelint-config": "latest",
     "@parcel/transformer-sass": "^2.13.2",
     "backstopjs": "6.3.23",
+    "gh-pages": "^6.2.0",
     "jest": "^29.7.0",
     "parcel": "^2.13.2",
     "prettier": "^3.3.2",
